--- a/app/src/main/res/layout/flight_list_item.xml
+++ b/app/src/main/res/layout/flight_list_item.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/flightCardView"
@@ -16,16 +15,7 @@
         android:layout_height="match_parent"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/idTextView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="0.5"
-            android:gravity="center"
-            android:text="id"
-            android:textSize="16sp" />
-
+        <!-- TextView для отображения цены -->
         <TextView
             android:id="@+id/priceTextView"
             android:layout_width="0dp"
@@ -36,12 +26,14 @@
             android:text="price"
             android:textSize="16sp" />
 
+        <!-- Блок для информации о рейсе -->
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="3"
             android:orientation="vertical">
 
+            <!-- Текст для отображения информации о авиакомпании -->
             <TextView
                 android:id="@+id/airlineTextView"
                 android:layout_width="match_parent"
@@ -49,7 +41,7 @@
                 android:text="airline"
                 android:textSize="16sp" />
 
-
+            <!-- Блок для отображения даты и места отправления и прибытия -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -74,6 +66,7 @@
                     android:textSize="16sp" />
             </LinearLayout>
 
+            <!-- Блок для отображения информации о месте отправления и прибытия -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
