--- a/app/src/main/res/layout/fragment_flight_search.xml
+++ b/app/src/main/res/layout/fragment_flight_search.xml
@@ -2,40 +2,23 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <LinearLayout
-        android:id="@+id/departureLL"
+    <androidx.appcompat.widget.SearchView
+        android:id="@+id/departureAirportSearchView"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:layout_marginTop="20dp"
-        android:orientation="vertical"
-        android:weightSum="3"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:layout_weight="1"
+        app:iconifiedByDefault="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginStart="10dp"
-            android:layout_weight="2"
-            android:gravity="start"
-            android:text="Выберите пункт отправления"
-            tools:ignore="HardcodedText" />
-
-        <androidx.appcompat.widget.SearchView
-            android:id="@+id/departureAirportSearchView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            app:iconifiedByDefault="false" />
-    </LinearLayout>
+        app:layout_constraintVertical_bias="0.0"
+        app:queryHint="Откуда" />
 
     <ImageButton
         android:id="@+id/swapButton"
@@ -49,50 +32,35 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.95"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/departureLL"
+        app:layout_constraintTop_toBottomOf="@id/departureAirportSearchView"
         app:layout_constraintVertical_bias="0.013" />
 
-    <LinearLayout
-        android:id="@+id/destinationLL"
+
+    <androidx.appcompat.widget.SearchView
+        android:id="@+id/destinationAirportSearchView"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:layout_marginTop="20dp"
-        android:orientation="vertical"
-        android:weightSum="3"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        app:iconifiedByDefault="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/swapButton"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintVertical_bias="0.0"
+        app:queryHint="Куда" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginStart="10dp"
-            android:layout_weight="2"
-            android:gravity="start"
-            android:text="Выберите пункт назначения"
-            tools:ignore="HardcodedText" />
-
-        <androidx.appcompat.widget.SearchView
-            android:id="@+id/destinationAirportSearchView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            app:iconifiedByDefault="false" />
-    </LinearLayout>
 
     <Button
         android:id="@+id/searchButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Поиск"
+        android:text="Найти"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.906"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/destinationLL"
+        app:layout_constraintTop_toBottomOf="@+id/destinationAirportSearchView"
         app:layout_constraintVertical_bias="0.034"
         tools:ignore="HardcodedText" />
 
