--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,9 @@
     </style>
 
     <style name="Theme.AviaRoute" parent="Base.Theme.AviaRoute" />
+
+    <style name="FullScreenDialogTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
+        <item name="android:windowIsFloating">false</item>
+
+    </style>
 </resources>
