--- a/app/src/main/res/anim/slide_in_up.xml
+++ b/app/src/main/res/anim/slide_in_up.xml
@@ -1,4 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
-<translate xmlns:android="http://schemas.android.com/apk/res/android"
-    android:fromYDelta="100%" android:toYDelta="0%"
-    android:duration="300" />
+<set xmlns:android="http://schemas.android.com/apk/res/android"
+    android:interpolator="@android:interpolator/decelerate_quad">
+    <translate
+        android:duration="500"
+        android:fromYDelta="100%"
+        android:toYDelta="0%" />
+</set>
