--- a/app/src/main/res/drawable/arrow_right_drawable.xml
+++ b/app/src/main/res/drawable/arrow_right_drawable.xml
@@ -3,8 +3,9 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
-  <path
-      android:fillColor="#FF000000"
-      android:pathData="M21.883,12l-7.527,6.235 0.644,0.765 9,-7.521 -9,-7.479 -0.645,0.764 7.529,6.236h-21.884v1h21.883z"
-      android:fillType="evenOdd"/>
+    <path
+        android:fillColor="#FF000000"
+        android:fillType="evenOdd"
+        android:pathData="M21.883,12l-7.527,6.235 0.644,0.765 9,-7.521 -9,-7.479 -0.645,0.764 7.529,6.236h-21.884v1h21.883z"
+        android:strokeLineJoin="round" />
 </vector>
