--- a/app/src/main/res/layout/purchased_list_item.xml
+++ b/app/src/main/res/layout/purchased_list_item.xml
@@ -15,9 +15,8 @@
         android:layout_height="match_parent"
         android:orientation="horizontal">
 
-        <!-- TextView для отображения цены -->
         <TextView
-            android:id="@+id/priceTextView"
+            android:id="@+id/flightSummaryTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -26,22 +25,12 @@
             android:text="price"
             android:textSize="16sp" />
 
-        <!-- Блок для информации о рейсе -->
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="3"
             android:orientation="vertical">
 
-            <!-- Текст для отображения информации о авиакомпании -->
-            <TextView
-                android:id="@+id/airlineTextView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="airline"
-                android:textSize="16sp" />
-
-            <!-- Блок для отображения даты и места отправления и прибытия -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -66,7 +55,7 @@
                     android:textSize="16sp" />
             </LinearLayout>
 
-            <!-- Блок для отображения информации о месте отправления и прибытия -->
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
