--- a/app/src/main/res/layout/flight_search.xml
+++ b/app/src/main/res/layout/flight_search.xml
@@ -41,6 +41,7 @@
         android:id="@+id/datePickerContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/destinationAirportInclude" />
 
