--- a/app/src/main/res/layout/flight_search_result.xml
+++ b/app/src/main/res/layout/flight_search_result.xml
@@ -1,4 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -57,6 +58,13 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/flightSearchResultRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="5dp" />
+
+    <include
+        android:visibility="gone"
+        android:id="@+id/dialogInclude"
+        layout="@layout/my_dialog" />
+
+
 </LinearLayout>
